src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --yellowcustom: #ffb947;
    --purplecustom: #792990;
    --purplecustondark: #350545;
}

body {
    @apply bg-custom-gradient;
}

canvas {
    background-color: transparent !important;
}


.w-full.h-96 {
    background-color: transparent !important;
}


html {
  background-color: #350545;
}

html, body {
  width: 100%;
  min-width: 100vw;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

@layer utilities {
    .bg-custom-gradient {
        @apply bg-gradient-to-t from-custom-purple to-primary;
    }
}

.underline-menu {
    position: relative;

    &:after {
        content: "";
        position: absolute;
        background-color: #fff;
        bottom: -4px;
        left: 0;
        width: 40%;
        height: 4px;
        border-radius: 10px;
        background-color: white;
        left: 50%;
        top: 0.5px;
        right: 5px;
        transform: translateX(-50%);
    }

    &:before {
        left: 50%;
        content: "";
        position: absolute;
        top: 0;
        width: 40%;
        height: 100%;
        background-image: linear-gradient(to bottom,
                rgba(255, 255, 255, 0.3),
                rgba(255, 255, 255, 0.1));
        clip-path: polygon(20% 0, 80% 0, 100% 100%, 0% 100%);
        transform: translateX(-50%);
        transition: all 0.3s ease;
    }



}

.yellow-light {
    box-shadow: hsla(0, 0%, 100%, 0.15) 0 1px 1px,
        inset hsla(0, 0%, 0%, 0.5) 0 0 0 1px;
    background-color: hsla(0, 0%, 0%, 0.2);
    background-image: -webkit-radial-gradient(hsla(38, 100%, 70%, 1) 0%,
            hsla(38, 100%, 55%, 1) 15%,
            hsla(38, 100%, 45%, 0.3) 28%,
            hsla(38, 100%, 25%, 0) 70%);
}

.input {
    -webkit-appearance: none;
    /* remove default */
    display: flex;
    margin-right: 6px;
    width: 12px;
    height: 12px;

    border-radius: 6px;
    cursor: pointer;
    vertical-align: middle;
    box-shadow: hsla(0, 0%, 100%, 0.15) 0 1px 1px,
        inset hsla(0, 0%, 0%, 0.5) 0 0 0 1px;
    background-color: hsla(0, 0%, 0%, 0.2);
    background-image: -webkit-radial-gradient(hsla(38, 100%, 70%, 1) 0%,
            hsla(38, 100%, 55%, 1) 15%,
            hsla(38, 100%, 45%, 0.3) 28%,
            hsla(38, 100%, 25%, 0) 70%);

    background-repeat: no-repeat;
    -webkit-transition: background-position 0.15s cubic-bezier(0.8, 0, 1, 1),
        -webkit-transform 0.25s cubic-bezier(0.8, 0, 1, 1);
    outline: none;
}

.input:checked {
    -webkit-transition: background-position 0.2s 0.15s cubic-bezier(0, 0, 0.2, 1),
        -webkit-transform 0.25s cubic-bezier(0, 0, 0.2, 1);
}

.input:active {
    -webkit-transform: scale(1.5);
    -webkit-transition: -webkit-transform 0.1s cubic-bezier(0, 0, 0.2, 1);
}

/* The up/down direction logic */

.input,
.input:active {
    background-position: 0 24px;
}

.input:checked {
    background-position: 0 0;
}

.input:checked~.input,
.input:checked~.input:active {
    background-position: 0 -24px;
}

.radio-input {
    display: flex;

    justify-content: center;
    align-items: center;

}

.radio-custom-label {
    display: inline-block;
    position: relative;
    width: 12px;
    height: 12px;
    margin-right: 16px;
    background-size: cover;
    cursor: pointer;
}



.radio-custom:checked+.radio-custom-label {
    width: 16px;
    height: 16px;
}

.image-container {
    padding-right: 0.5rem;
}

.tooltip-text {
    visibility: hidden;
    width: 120px;
    background-color: #350545;

    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;


    position: absolute;
    z-index: 1;
    bottom: 100%;
    left: 50%;
    margin-left: -60px;


    opacity: 0;
    transition: opacity 0.3s;
}

.radio-custom-label:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

.link {
    transition: background 0.3s ease;
    background-size: 25% 25%;
    background-repeat: no-repeat;
    background-position-x: 60%;
    background-position-y: 90%;
}

.link:hover,
.link-active {
    color: var(--yellowcustom);
    background-size: 25% 25%;
    background-repeat: no-repeat;
    background-position-x: 50%;
    background-position-y: 90%;

    background-image: -webkit-radial-gradient(hsla(38, 100%, 80%, 1) 0%,
            hsla(38, 100%, 65%, 1) 15%,
            hsla(38, 100%, 55%, 0.5) 28%,
            hsla(38, 100%, 35%, 0) 70%);
}

.high-tech-minimalist-line-light {
    position: relative;
    width: 100%;
    height: 1px;
    background-color: #350545;
}

.line {
    position: absolute;
    width: 100%;
    height: 1px;
    background-color: #792990;
    transform-origin: left;
    transform: scaleX(0);
    transition: transform 2s;
    z-index: 1000;
}

.line.animate {
    transform: scaleX(1);
}

.high-tech-minimalist-line-light:hover .line {
    transform: scaleX(1);
}

.dock-item {
    width: 30px;
    height: 30px;
    border-radius: 30px;
    margin: 0 10px;
    background: var(--bg);
    color: var(--color);
    border: 1px solid var(--border);
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
    transform-origin: bottom;
}

.lines {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 100%;
    margin: auto;
    width: 90vw;
}

.line {
    position: absolute;
    width: 10px;
    height: 100%;
    top: 0;
    left: 50%;
    background: rgba(255, 255, 255, 0.2);
    overflow: hidden;
}

.line:nth-child(1) {
    margin-left: -25%;
}

.line:nth-child(3) {
    margin-left: 25%;
}

.line::after {
    content: "";
    display: block;
    position: absolute;
    height: 15vh;
    width: 100%;
    top: -50%;
    left: 0;
    background: linear-gradient(to bottom,
            rgba(255, 255, 255, 0) 0%,
            #ffffff 75%,
            #ffffff 100%);
    -webkit-animation: drop 7s 0s infinite;
    animation: drop 7s 0s infinite;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
}

@keyframes drop {
    0% {
        top: -50%;
    }

    100% {
        top: 110%;
    }
}

.line:nth-child(1)::after {
    -webkit-animation-delay: 2s;
    animation-delay: 2s;
}

.line:nth-child(3)::after {
    -webkit-animation-delay: 2.5s;
    animation-delay: 2.5s;
}

.wrapp {
    width: 100%;
    height: auto;
    overflow: hidden;
    z-index: 1;
}

.content {
    width: 100%;
    padding: 0 70px;
}

.char {
    display: inline-block;
}

/* Paralax Effect On GSAP **********************************/
/* header ********/

/* footer ********/
.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.footer__div {
    font-size: 70px;
    letter-spacing: 15px;
    color: var(--pr-color);
    text-transform: uppercase;
}

.footer__div span {
    display: inline-block;
}

.bg-home-cards {
    background-image: url("/svg/bghome.svg");
    background-size: cover;
    background-repeat: no-repeat;
    width: 100vh;
}

.container-bright {
    width: 150px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.btn-bright {
    position: relative;
    width: 155px;
    height: 50px;
    margin: 20px;
}



.btn-bright a {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.051);
    /* box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2); */
    /* border-top: 1px solid rgba(250, 52, 52, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
    z-index: 10;
    color: #fff;
    border-radius: 30px;
    font-weight: 400;
    letter-spacing: 1px;
    text-decoration: none;
    transition: 0.5s;
    overflow: hidden;
    backdrop-filter: blur(15px);
}

.btn-bright:hover a {
    letter-spacing: 3px;
}

.btn-bright a:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 50%;
    height: 100%;
    background: linear-gradient(to left,
            rgba(255, 255, 255, 0.149),
            transparent);
    transform: skewX(45deg);
    transition: 0.5s;
    transition-delay: 0.5s;
}

a:hover::before {
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    height: 0%;
    opacity: 0;

}

.btn-bright:before {
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: var(--yellowcustom);
    bottom: -5px;
    width: 30px;
    height: 10px;
    border-radius: 10px;
    transition: 0.5s;
    transition-delay: 0s;
}

.btn-bright:hover::before {
    bottom: 0px;
    height: 50%;
    width: 80%;
    border-radius: 30px;
    transition-delay: 0.5s;
}

.btn-bright:after {
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: var(--yellowcustom);
    top: -5px;
    width: 30px;
    height: 10px;
    border-radius: 10px;
    transition: 0.5s;
    transition-delay: 0s;
}

.btn-bright:hover::after {
    top: 0px;
    height: 50%;
    width: 80%;
    border-radius: 30px;
    transition-delay: 0.5s;
}

.btn-bright:nth-child(1):before,
.btn-bright:nth-child(1):after {
    background: var(--yellowcustom);
    box-shadow: 0 0 5px var(--yellowcustom), 0 0 15px var(--yellowcustom),
        0 0 30px var(--yellowcustom), 0 0 60px var(--yellowcustom);
}

.btn-bright:nth-child(2):before,
.btn-bright:nth-child(2):after {
    background: var(--yellowcustom);
    box-shadow: 0 0 5px var(--yellowcustom), 0 0 15px var(--yellowcustom),
        0 0 30px var(--yellowcustom), 0 0 60px var(--yellowcustom);
}

.btn-bright:nth-child(3):before,
.btn-bright:nth-child(3):after {
    background: var(--yellowcustom);
    box-shadow: 0 0 5px var(--yellowcustom), 0 0 15px var(--yellowcustom),
        0 0 30px var(--yellowcustom), 0 0 60px var(--yellowcustom);
}

.tag-list {
    width: 100%;
    position: relative;
    overflow: hidden;
}

.inner {
    width: fit-content;
    display: flex;
    gap: 1rem;
    animation: loop 40s linear infinite;
}

.tag {
    display: flex;
    white-space: nowrap;
    align-items: center;
    gap: 0 0.2rem;
    color: #e2e8f0;
    font-size: 0.9rem;
    background-color: var(--purplecustondark);
    padding: 0.7rem 1rem;
    border-radius: 0.4rem;
    box-shadow: 0 0.1rem 0.2rem #00000033, 0 0.1rem 0.5rem #0000004d,
        0 0.1rem 1.5rem #00000066;
}

.tag span {
    font-size: 1.2rem;
    color: var(--purplecustom);
}

.fade {
    position: absolute;
    background: linear-gradient(90deg,
            var(--purplecustondark),
            transparent 30%,
            transparent 70%,
            var(--purplecustondark));
    inset: 0;
    pointer-events: none;
}

@keyframes loop {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-50%);
    }
}

.image-filter {
    position: relative;
    display: inline-block;
}

.image-filter img {
    filter: sepia(1) saturate(1000%) hue-rotate(310deg) brightness(0.6);
    transition: filter 0.3s ease;
}

.image-filter:hover img {
    filter: none;
}

